Integrate with elasticsearch
